--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5433/CTW
-spring.datasource.username=postgres
-spring.datasource.password=okokokok
+# application.properties
+
+spring.datasource.url=jdbc:postgresql://ctw-database.cx52cmzyuode.us-east-2.rds.amazonaws.com:5432/postgres
+spring.datasource.username=guy
+spring.datasource.password=noderneder
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.defer-datasource-initialization = true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
