objects with anotate - run good

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # application.properties
 
+#logging.level.org.hibernate=DEBUG
 spring.datasource.url=jdbc:postgresql://ctw-database.cx52cmzyuode.us-east-2.rds.amazonaws.com:5432/postgres
 spring.datasource.username=guy
 spring.datasource.password=noderneder
