--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 logging.level.org.hibernate.loader.Loader=OFF
 
 server.port = 8080
+server.address=0.0.0.0
